force-app/main/default/objects/Order_Approval__c/Order_Approval__c.object-meta.xml
<CustomObject>
    <label>Order Approval</label>
    <pluralLabel>Order Approvals</pluralLabel>
    <description>Order Approval</description>
    <nameField>
        <label>Order Approval Name</label>
        <type>AutoNumber</type>
        <displayFormat>OAP-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>