force-app/main/default/objects/Order_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Order_Approvals_Owned</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver</description>
</CustomField>