force-app/main/default/objects/Order_Approval__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Approvals</relationshipLabel>
    <relationshipName>Order_Approvals</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Order</description>
</CustomField>