force-app/main/default/objects/Order_Approval__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Reason</description>
</CustomField>